# optativa-fpga

./: README.md  make.sh  work-obj93.cf
perceptron_fpga/: pyproject.toml
perceptron_fpga/model/: generate_weights_package.py  tensorflow_model.py
perceptron_fpga/model/tensorflow.model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
perceptron_fpga/model/tensorflow.model/variables/: variables.data-00000-of-00001  variables.index
perceptron_fpga/src/mnist_model/: mnist_model.vhdl
perceptron_fpga/src/neural_network/: perceptron.vhdl
perceptron_fpga/tests/mnist_model/: mnist_model_test.vhdl  tf_mnist_inputs_5.vhdl  tf_mnist_inputs_7.vhdl  tf_mnist_inputs_9.vhdl  tf_mnist_weights.vhdl
